# TripleA

./: .gitignore  App.cpp  App.hpp  Button.cpp  Button.hpp  CMakeLists.txt  DecayEffect.hpp  Device.cpp  Device.hpp  Effect.hpp  Makefile  README.md  SineWave.cpp  SineWave.hpp  Slider.cpp  Slider.hpp  Track.cpp  Track.hpp  a.out  sequencer.cpp  sequencer.hpp
Effects/: DecayEffect.cpp  Downsample.cpp  Downsample.hpp  Effect.hpp
Tones/: PCMTone.cpp  PCMTone.hpp  Sine.cpp  Sine.hpp  Square.cpp  Tone.cpp  Tone.hpp  ToneFactory.cpp  ToneFactory.hpp  Triangle.cpp
TripleA/: CMakeLists.txt
TripleA/Audio/: AudioData.cpp  AudioData.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioObject.hpp  Player.cpp  Player.hpp  Track.cpp  Track.hpp
TripleA/GUI/: Application.cpp  Application.h  ApplicationState.h  CMakeLists.txt  Cursor.cpp  Cursor.hpp  DynamicModel.cpp  DynamicModel.hpp  MenuState.cpp  MenuState.h  README.md  Visualization.cpp  Visualization.hpp  layout.json  main.cpp
TripleA/GUI/Layouts/: Layout.cpp  Layout.h  layout.json
TripleA/GUI/States/: ApplicationState.h  MenuState.cpp  MenuState.h
TripleA/GUI/Widgets/: Button.cpp  Button.h  IWidget.cpp  IWidget.h  Listener.cpp  Listener.h  Slider.cpp  Slider.h  Widgets.h
include/: App.hpp  Button.hpp  Device.hpp  Listener.hpp  Notes.hpp  Slider.hpp  Track.hpp
include/Audio/: AlsaDevice.hpp  Audio.hpp  AudioObject.hpp  Notes.hpp  PCMTone.hpp  Sawtooth.hpp  Sine.hpp  Square.hpp  Tone.hpp  Track.hpp  Triangle.hpp
include/Effects/: DecayEffect.hpp  Effect.hpp  FIR.hpp  Reverb.hpp  Tremolo.hpp  Vibrato.hpp
include/GUI/: App.hpp  Button.hpp  DropDownItem.hpp  DropDownMenu.hpp  DropDownMenuBar.hpp  GUI.hpp  Knob.hpp  Listener.hpp  Oscilloscope.hpp  Slider.hpp  Widget.hpp
include/Tones/: Sawtooth.hpp  Sine.hpp  Square.hpp  Tone.hpp  ToneFactory.hpp  Triangle.hpp
src/: App.cpp  Button.cpp  Device.cpp  Oscilloscope.cpp  Slider.cpp  Track.cpp
src/Audio/: AlsaDevice.cpp  PCMTone.cpp  Sawtooth.cpp  Sine.cpp  Square.cpp  Tone.cpp  Track.cpp  Triangle.cpp
src/Effects/: DecayEffect.cpp  Downsample.cpp  FIR.cpp  Reverb.cpp  Tremolo.cpp  Vibrato.cpp
src/GUI/: App.cpp  (+9 more)
test/: CMakeLists.txt
(+27 files in other folders)
